syntax = "proto3";

package user;
option go_package = "user/proto";

service User{
	rpc Create (CreateRequest) returns (CreateResponse){}
	rpc Update (UpdateRequest) returns (UpdateResponse){}
	rpc InfoById (InfoByIdRequest) returns (InfoByIdResponse){}
	rpc InfoByUsername (InfoByUsernameRequest) returns (InfoByUsernameResponse){}
	rpc Self (SelfRequest) returns (SelfResponse){}
}

message CreateRequest {
	string token = 1;
	string username = 2;
	string firstName = 3;
	string lastName = 4;
	optional string email = 5;
	optional string phone = 6;
}
message CreateResponse {
	string accountId = 1;
	string userId = 2;
	string username = 3;
	string firstName = 4;
	string lastName = 5;
	optional string email = 6;
	optional string phone = 7;
}

message UpdateRequest {
	string token = 1;
	string userId = 2;
	optional string firstName = 3;
	optional string lastName = 4;
	optional string email = 5;
	optional string phone = 6;
}
message UpdateResponse {
	string accountId = 1;
	string userId = 2;
	string username = 3;
	string firstName = 4;
	string lastName = 5;
	optional string email = 6;
	optional string phone = 7;
}

message InfoByIdRequest {
	string token = 1;
	string userId = 2;
}
message InfoByIdResponse {
	string userId = 2;
	string username = 3;
	string firstName = 4;
	string lastName = 5;
	optional string email = 6;
	optional string phone = 7;
}

message InfoByUsernameRequest {
	string token = 1;
	string username = 2;
}
message InfoByUsernameResponse {
	string userId = 2;
	string username = 3;
	string firstName = 4;
	string lastName = 5;
	optional string email = 6;
	optional string phone = 7;
}

message SelfRequest {
	string token = 1;
}
message SelfResponse {
	string accountId = 1;
	string userId = 2;
	string firstName = 3;
	string lastName = 4;
	optional string email = 5;
	optional string phone = 6;
}
